# libsensors-cpp

./: CMakeLists.txt  README.md
include/sensors-c++/: error.h  sensors.h
src/: error.cpp  sensors.cpp
test/: CMakeLists.txt  main.cpp
